enhance code & update api - getContentById / SMYLMVP-38
